test/errors/stmt_yield_from_async.py
async def f():
    yield from g()
